--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -4,8 +4,8 @@ body{
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)),
-    url(./IMG/fondo.jpg);
+     background: linear-gradient(to top,rgba(30,35,38,.8), rgba(30,35,38,1)),
+    url(..//IMG/fondo.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -38,7 +38,7 @@ body{
 .container-header header .logo a {
     font-family: 'Righteos';
     font-size: 36px;
-    color: #1020ad;
+    color: #001eff;
     text-decoration: none;
 }
 .container-header header ul{
