--- a/CSS/sobre_mi.css
+++ b/CSS/sobre_mi.css
@@ -180,7 +180,7 @@ footer .redes a:hover{
     display: block;
     font-size: 28px;
     cursor: pointer;
-    color: #1e00ff;/color de tu logo/
+    color: #1e00ff;
     position: absolute;
     right: 20px;
     top: 20px;
