--- a/CSS/contacto.css
+++ b/CSS/contacto.css
@@ -184,3 +184,110 @@ footer a:hover {
 }
 
 
+/*BRRRA DE NAVEGACION*/
+#menu-toggle{
+    display: none;
+}
+.menu-icon{
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: blue;
+    margin-left: auto;
+    border-radius: 20px;
+    margin-top: auto;
+}
+/*RESPONSIVE BARRA DE NAVEGACION*/
+@media (max-width: 768px) {
+  #menu-toggle {
+    display: none;
+  }
+
+  .menu-icon {
+    display: block;
+    font-size: 28px;
+    cursor: pointer;
+    color: #0004ff; 
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    z-index: 300;
+  }
+
+  .container-header header .nav ul {
+    display: none;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    width: 200px;
+    padding: 10px 0;
+    border-radius: 6px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+    z-index: 250;
+  }
+
+  #menu-toggle:checked ~ .nav ul {
+    display: flex;
+  }
+
+  .container-header header .nav ul li {
+    margin: 5px 0;
+  }
+
+  .container-header header .nav ul li a {
+    color: #fff;
+    padding: 10px 15px;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media (max-width: 768px) {
+  nav{
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .logo{
+  height: 50px;
+  margin-bottom: 10px;
+}
+nav ul {
+  flex-direction: column;
+  gap: 15px;
+}
+.container{
+  margin-top: auto;
+}
+}
+
+@media (max-width: 768px) {
+  .container-derecha {
+    margin: auto;
+    background: #030303;
+    width: 400px;
+    height: 290px;
+    border-radius: 20px;
+    justify-content: center;
+  }
+
+  iframe{
+    align-items: center;
+    flex-direction: column; 
+    width: 380px;
+    height: 380px;
+    margin: auto;
+  }
+  .mapa{
+    margin: auto;
+    background: #030303;
+    width: 400px;
+    height: 400px;
+    border-radius: 20px;
+   margin-top: 20px;
+   
+    justify-content: center;
+}
+}
